--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -22,4 +22,10 @@ spring:
 
 server:
   port: 8002
+  
+  rabbitmq:
+    host: 192.168.153.133
+    port: 5672
+    username: admin
+    password: admin
    
