--- a/config/order-service-dev.yml
+++ b/config/order-service-dev.yml
@@ -34,3 +34,9 @@ spring:
 server:
   port: 8202
   
+  rabbitmq:
+    host: 192.168.153.133
+    port: 5672
+    username: admin
+    password: admin
+  
