--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -23,3 +23,9 @@ management:
 sp:
   user-service:
     users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"ghi\",\"password\":\"789\"},{\"id\":99, \"username\":\"aaa\",\"password\":\"111\"}]"
+    
+  rabbitmq:
+    host: 192.168.153.133
+    port: 5672
+    username: admin
+    password: admin
