--- a/config/zuul-dev.yml
+++ b/config/zuul-dev.yml
@@ -38,3 +38,9 @@ management:
     web:
       exposure:
         include: hystrix.stream
+        
+  rabbitmq:
+    host: 192.168.153.133
+    port: 5672
+    username: admin
+    password: admin
